--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna recipe</a></li>
-        <li><a href=""></a>2nd</li>
-        <li><a href=""></a>3rd</li>
+        <li><a href="README.md">2nd recipe to be added</a></li>
+        <li><a href="README.md">3rd recipe to be added</a></li>
     </ul>
 </body>
 </html>
